# single_kernel_GPU_model

./: .gitignore  EnergAIzer_Colab_Demo.ipynb  README.md  Single_Kernel_Power_Trace_Colab.ipynb  power_trace.py
energaizer-ispass26-artifact-main/: .gitignore  .gitmodules  README.md
energaizer-ispass26-artifact-main/database/code/cublas/: CMakeLists.txt
energaizer-ispass26-artifact-main/database/code/cublas/app/: CMakeLists.txt  gemm_bench.cpp
energaizer-ispass26-artifact-main/database/code/cublas/cmake/: ExternalLibs.cmake
energaizer-ispass26-artifact-main/database/code/cublas/include/: nvmlClass.h
energaizer-ispass26-artifact-main/database/code/cublas/include/gemm/: gemm_cublas.cuh  gemm_global.cuh  gemm_top.cuh  strided_batched_gemm_cublas.cuh
energaizer-ispass26-artifact-main/database/code/cublas/include/util/: gemm_util.cuh  gpucheck.cuh  gpuinfo.cuh  precision_select.cuh
energaizer-ispass26-artifact-main/database/code/cublas/scripts/: generate_bash_script.py  generate_lut.py  ncu_metrics_parser.py  ncu_parser.py  parse_folder.py  utils.py
energaizer-ispass26-artifact-main/database/code/cublas/scripts/scripts/: run_bf16_tensorcore_gemm.sh  run_fp32_cudacore_gemm.sh
energaizer-ispass26-artifact-main/database/code/cublas/scripts/test/: bf16_tensorcore_gemm_workloads.csv
energaizer-ispass26-artifact-main/database/code/cublas/scripts/workloads/: bf16_tensorcore_gemm_workloads.csv  fp32_cudacore_gemm_workloads.csv
energaizer-ispass26-artifact-main/database/code/cublas/src/: CMakeLists.txt
energaizer-ispass26-artifact-main/database/code/cublas/src/gemm/: CMakeLists.txt  gemm_cublas.cu  gemm_top.cu  strided_batched_gemm_cublas.cu
(+44 files in other folders)
